--- a/the-man.html
+++ b/the-man.html
@@ -51,7 +51,7 @@
         <li>
           <a href="vaka-incelemeleri.html">
             <img class="icon" src="./psi.png" alt="psi" />
-            <span>Yayımlanmış Vaka İncelemeleri</span>
+            <span>Vaka İncelemeleri</span>
           </a>
         </li>
         <li>
@@ -88,7 +88,7 @@
               <li class="active">
                 <a href="/the-man.html">The Man Who Couldn't Stop </a>
               </li>
-              <li><a href="/masumiyet.html">Masumiyet</a></li>
+              <li><a href="/masumiyet.html">Masumiyet Müzesi</a></li>
               <li><a href="/masumlar.html">Masumlar Apartmanı </a></li>
               <li><a href="/matchstick-men.html">Matchstick Men </a></li>
               <li><a href="/galip-dervis.html">Galip Derviş </a></li>
