--- a/vaka-incelemeleri.html
+++ b/vaka-incelemeleri.html
@@ -51,7 +51,7 @@
         <li class="active">
           <a href="vaka-incelemeleri.html">
             <img class="icon" src="./psi.png" alt="psi" />
-            <span>Yayımlanmış Vaka İncelemeleri</span>
+            <span>Vaka İncelemeleri</span>
           </a>
         </li>
         <li>
@@ -86,7 +86,7 @@
             <div>
               <li><a href="/the-aviator.html">The Aviator</a></li>
               <li><a href="/the-man.html">The Man Who Couldn't Stop </a></li>
-              <li><a href="/masumiyet.html">Masumiyet</a></li>
+              <li><a href="/masumiyet.html">Masumiyet Müzesi</a></li>
               <li><a href="/masumlar.html">Masumlar Apartmanı </a></li>
               <li><a href="/matchstick-men.html">Matchstick Men </a></li>
               <li><a href="/galip-dervis.html">Galip Derviş </a></li>
