--- a/kitap-filmler.html
+++ b/kitap-filmler.html
@@ -14,7 +14,7 @@
         <li>
           <div class="header">
             <span class="logo">Patoloji Ödev</span>
-            <img class="deu-logo" src="./images//Deu_logo.png" />
+            <img class="deu-logo" src="/deu.ico" />
           </div>
           <button onclick="toggleSidebar()" id="toggle-btn">
             <svg
@@ -66,34 +66,11 @@
             <span>Psikoterapi</span>
           </a>
         </li>
-        <li>
-          <button onclick="toggleSubMenu(this)" class="dropdown-btn">
+        <li class="active">
+          <a href="kitap-filmler.html">
             <img class="icon" src="./psi.png" alt="psi" />
             <span>Kitap ve Filmler</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="24px"
-              viewBox="0 -960 960 960"
-              width="24px"
-              fill="#e8eaed"
-            >
-              <path
-                d="M480-361q-8 0-15-2.5t-13-8.5L268-556q-11-11-11-28t11-28q11-11 28-11t28 11l156 156 156-156q11-11 28-11t28 11q11 11 11 28t-11 28L508-372q-6 6-13 8.5t-15 2.5Z"
-              />
-            </svg>
-          </button>
-          <ul class="sub-menu">
-            <div>
-              <li class="active">
-                <a href="/the-aviator.html">The Aviator</a>
-              </li>
-              <li><a href="/the-man.html">The Man Who Couldn't Stop </a></li>
-              <li><a href="/masumiyet.html">Masumiyet Müzesi</a></li>
-              <li><a href="/masumlar.html">Masumlar Apartmanı </a></li>
-              <li><a href="/matchstick-men.html">Matchstick Men </a></li>
-              <li><a href="/galip-dervis.html">Galip Derviş </a></li>
-            </div>
-          </ul>
+          </a>
         </li>
         <li>
           <a href="kaynakca.html">
@@ -109,6 +86,19 @@
         <img class="image" src="./images/aviator2.png" alt="aviator-2" />
         <img class="image" src="./images/aviator3.png" alt="aviator-3" />
         <img class="image" src="./images/aviator4.png" alt="aviator-4" />
+      </div>
+      <div class="container">
+        <img class="image" src="./images/theman1.png" alt="theman-1" />
+        <img class="image" src="./images/theman2.png" alt="theman-2" />
+        <img class="image" src="./images/theman3.png" alt="theman-3" />
+        <img class="image" src="./images/theman4.png" alt="theman-4" />
+      </div>
+      <div class="container">
+        <img class="image" src="./images/masumlar1.png" alt="masumlar-1" />
+        <img class="image" src="./images/masumlar3.png" alt="masumlar-2" />
+        <img class="image" src="./images/masumlar4.png" alt="masumlar-3" />
+        <img class="image" src="./images/masumlar5.png" alt="masumlar-4" />
+        <img class="image" src="./images/masumlar6.png" alt="masumlar-5" />
       </div>
     </main>
   </body>
