--- a/vaka-incelemeleri.html
+++ b/vaka-incelemeleri.html
@@ -14,7 +14,7 @@
         <li>
           <div class="header">
             <span class="logo">Patoloji Ödev</span>
-            <img class="deu-logo" src="./images//Deu_logo.png" />
+            <img class="deu-logo" src="/deu.ico" />
           </div>
           <button onclick="toggleSidebar()" id="toggle-btn">
             <svg
@@ -67,31 +67,10 @@
           </a>
         </li>
         <li>
-          <button onclick="toggleSubMenu(this)" class="dropdown-btn">
+          <a href="kitap-filmler.html">
             <img class="icon" src="./psi.png" alt="psi" />
             <span>Kitap ve Filmler</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="24px"
-              viewBox="0 -960 960 960"
-              width="24px"
-              fill="#e8eaed"
-            >
-              <path
-                d="M480-361q-8 0-15-2.5t-13-8.5L268-556q-11-11-11-28t11-28q11-11 28-11t28 11l156 156 156-156q11-11 28-11t28 11q11 11 11 28t-11 28L508-372q-6 6-13 8.5t-15 2.5Z"
-              />
-            </svg>
-          </button>
-          <ul class="sub-menu">
-            <div>
-              <li><a href="/the-aviator.html">The Aviator</a></li>
-              <li><a href="/the-man.html">The Man Who Couldn't Stop </a></li>
-              <li><a href="/masumiyet.html">Masumiyet Müzesi</a></li>
-              <li><a href="/masumlar.html">Masumlar Apartmanı </a></li>
-              <li><a href="/matchstick-men.html">Matchstick Men </a></li>
-              <li><a href="/galip-dervis.html">Galip Derviş </a></li>
-            </div>
-          </ul>
+          </a>
         </li>
         <li>
           <a href="kaynakca.html">
