--- a/kitap-filmler.html
+++ b/kitap-filmler.html
@@ -14,7 +14,7 @@
         <li>
           <div class="header">
             <span class="logo">Patoloji Ödev</span>
-            <img class="deu-logo" src="/deu.ico" />
+            <img class="deu-logo" src="./images/Deu_logo.png" />
           </div>
           <button onclick="toggleSidebar()" id="toggle-btn">
             <svg
@@ -94,11 +94,45 @@
         <img class="image" src="./images/theman4.png" alt="theman-4" />
       </div>
       <div class="container">
-        <img class="image" src="./images/masumlar1.png" alt="masumlar-1" />
-        <img class="image" src="./images/masumlar3.png" alt="masumlar-2" />
-        <img class="image" src="./images/masumlar4.png" alt="masumlar-3" />
-        <img class="image" src="./images/masumlar5.png" alt="masumlar-4" />
-        <img class="image" src="./images/masumlar6.png" alt="masumlar-5" />
+        <div
+          style="
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-top: 56.25%;
+            padding-bottom: 0;
+            box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+            margin-top: 1.6em;
+            margin-bottom: 0.9em;
+            overflow: hidden;
+            border-radius: 8px;
+            will-change: transform;
+          "
+        >
+          <iframe
+            loading="lazy"
+            style="
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
+              border: none;
+              padding: 0;
+              margin: 0;
+            "
+            src="https://www.canva.com/design/DAGdD7Q66Pw/yn1HE7-vrK7mbOk2ANDj0Q/view?embed"
+            allowfullscreen="allowfullscreen"
+            allow="fullscreen"
+          >
+          </iframe>
+        </div>
+        <a
+          href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdD7Q66Pw&#x2F;yn1HE7-vrK7mbOk2ANDj0Q&#x2F;view?utm_content=DAGdD7Q66Pw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+          target="_blank"
+          rel="noopener"
+          >MASUMLAR APARTMANI</a
+        >
       </div>
       <div class="container">
         <div
@@ -139,6 +173,88 @@
           target="_blank"
           rel="noopener"
           >galip derviş</a
+        >
+      </div>
+      <div class="container">
+        <div
+          style="
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-top: 56.25%;
+            padding-bottom: 0;
+            box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+            margin-top: 1.6em;
+            margin-bottom: 0.9em;
+            overflow: hidden;
+            border-radius: 8px;
+            will-change: transform;
+          "
+        >
+          <iframe
+            loading="lazy"
+            style="
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
+              border: none;
+              padding: 0;
+              margin: 0;
+            "
+            src="https://www.canva.com/design/DAGdDvujwhQ/vQIMg9Rn_0i8gIMV7UkSGA/view?embed"
+            allowfullscreen="allowfullscreen"
+            allow="fullscreen"
+          >
+          </iframe>
+        </div>
+        <a
+          href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdDvujwhQ&#x2F;vQIMg9Rn_0i8gIMV7UkSGA&#x2F;view?utm_content=DAGdDvujwhQ&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+          target="_blank"
+          rel="noopener"
+          >MASUMİYET MÜZESİ</a
+        >
+      </div>
+      <div class="container">
+        <div
+          style="
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-top: 56.25%;
+            padding-bottom: 0;
+            box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+            margin-top: 1.6em;
+            margin-bottom: 0.9em;
+            overflow: hidden;
+            border-radius: 8px;
+            will-change: transform;
+          "
+        >
+          <iframe
+            loading="lazy"
+            style="
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
+              border: none;
+              padding: 0;
+              margin: 0;
+            "
+            src="https://www.canva.com/design/DAGdEXlzjTw/x7dlFRrC9l6-LtN8pLcbWw/view?embed"
+            allowfullscreen="allowfullscreen"
+            allow="fullscreen"
+          >
+          </iframe>
+        </div>
+        <a
+          href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdEXlzjTw&#x2F;x7dlFRrC9l6-LtN8pLcbWw&#x2F;view?utm_content=DAGdEXlzjTw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+          target="_blank"
+          rel="noopener"
+          >Matchstick Men</a
         >
       </div>
     </main>
