--- a/tani-kriterleri.html
+++ b/tani-kriterleri.html
@@ -14,7 +14,7 @@
         <li>
           <div class="header">
             <span class="logo">Patoloji Ödev</span>
-            <img class="deu-logo" src="/deu.ico" />
+            <img class="deu-logo" src="./images/Deu_logo.png" />
           </div>
           <button onclick="toggleSidebar()" id="toggle-btn">
             <svg
