--- a/psikoterapi.html
+++ b/psikoterapi.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ana Sayfa</title>
+    <title>Psikoterapi</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="x-icon" href="./deu.ico" />
     <script type="text/javascript" src="app.js" defer></script>
